ontol/ontol-compiler/test-cases/error/repr/macro_object.on
def foo (
    rel* 'prop': bar // ERROR object must be a data type
)

def @macro bar ()
